--- a/app/templates/base_pure.html
+++ b/app/templates/base_pure.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="{% static 'js/script.js' %}"></script>
+
     <title>{% block title %}{% endblock %}</title>
   </head>  
 
