--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -8,7 +8,10 @@
 
 {% block content %}
   <div class="row p-4 g-2 bg-primary c-rounded-10px mt-4 c-text-second">
-    <form> 
+    <div class="row">
+      {% include "components/alert.html" %}
+    </div>
+    <form>
       <div class="col-auto">
         <label for="loginInput" class="form-label me-2">Login</label>
         <input type="text" id="usernameInput" class="form-control">
